--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+           android:name="com.example.reciclerviewconretrofit.framework.detail.DetalleActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
