--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,34 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
         android:name="com.example.reciclerviewconretrofit.framework.JuegosApp"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.ReciclerViewConRetrofit"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name="com.example.reciclerviewconretrofit.framework.main.MainActivity"
             android:exported="true">
+
+        </activity>
+        <activity
+            android:name="com.example.reciclerviewconretrofit.framework.SplashScreenActivity"
+            android:theme="@style/Theme.Design.NoActionBar"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-           android:name="com.example.reciclerviewconretrofit.framework.detail.DetalleActivity"
+            android:name="com.example.reciclerviewconretrofit.framework.detail.DetalleActivity"
             android:exported="true">
 
         </activity>
+
     </application>
 
 </manifest>
